PFS-2490 #comment fixed, added support for increase on 64 bit